<resources>
    <string name="app_name">RIPA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_bills">Bills Payment</string>
    <string name="menu_funds">Funds Transfer</string>
    <string name="menu_profile">Profile</string>
    <string name="cellphone">Cellphone</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="menu_appoint">Appointment</string>
    <string name="menu_trans">Transaction</string>
    <string name="menu_add">Add Funds</string>
</resources>