<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_baseline_assistant_24"
            android:title="@string/menu_bills" />
        <item
            android:id="@+id/nav_fund"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_funds" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_trans" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_baseline_touch_app_24"
            android:title="@string/menu_appoint" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_add" />
    </group>
</menu>